<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="0"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_toggle_bookmark"
        android:icon="@drawable/ic_bookmark_border_white_24dp"
        android:orderInCategory="3"
        android:title="@string/context_toggle_bookmark"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="2"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_fullscreen"
        android:icon="@drawable/ic_fullscreen_white_24dp"
        android:orderInCategory="45"
        android:title="@string/fullscreen"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_font_size"
        android:icon="@drawable/ic_format_size_white_24dp"
        android:orderInCategory="50"
        android:title="@string/pref_title_item_font_size"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_open_in_browser"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        android:orderInCategory="100"
        android:title="@string/open_in_browser"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1000"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>