<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="0"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_action_language"
        android:orderInCategory="1"
        android:title="@string/menu_language"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_layout"
        android:icon="@drawable/ic_layout_double"
        android:orderInCategory="1"
        android:title="@string/action_toggle_layout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="2"
        android:title="@string/menu_refresh"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_unread"
        android:icon="@drawable/ic_visibility_off_white_24dp"
        android:orderInCategory="3"
        android:title="@string/action_view_only_unread"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mark_all_as_read"
        android:icon="@drawable/ic_done_all_white_24dp"
        android:orderInCategory="4"
        android:title="@string/action_mark_all_as_read"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_by_date"
        android:icon="@drawable/ic_swap_vert_white_24dp"
        android:orderInCategory="5"
        android:title="@string/action_sort_by_date"
        app:showAsAction="never" />
</menu>