<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
    <!--android:id="@+id/menu_clear_search"-->
    <!--android:icon="@drawable/ic_cancel_white_24dp"-->
    <!--android:orderInCategory="0"-->
    <!--android:title="@string/menu_clear_search"-->
    <!--android:visible="false"-->
    <!--app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_player_options"
        android:title="@string/youtube_player_options"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_youtube_terms"
        android:orderInCategory="300"
        android:title="@string/terms_and_privacy_policy"
        app:showAsAction="never" />
</menu>