<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/socialButtonsContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?entryDetailBackground"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:visibility="gone"
    tools:visibility="visible">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="?drawerDividerColor"
            tools:background="#ffe5e5e5" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/social_media_share"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_facebook"
            style="@style/SocialButtonStyle"
            android:drawableLeft="@drawable/ic_facebook_white_24dp"
            android:drawableStart="@drawable/ic_facebook_white_24dp"
            android:text="@string/social_facebook"
            android:theme="@style/SocialButton.Facebook"
            tools:backgroundTint="#3b5998" />

        <Button
            android:id="@+id/btn_twitter"
            style="@style/SocialButtonStyle"
            android:drawableLeft="@drawable/ic_twitter_white_24dp"
            android:drawableStart="@drawable/ic_twitter_white_24dp"
            android:text="@string/social_twitter"
            android:theme="@style/SocialButton.Twitter"
            tools:backgroundTint="#1da1f2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_whatsapp"
            style="@style/SocialButtonStyle"
            android:drawableLeft="@drawable/ic_whatsapp_white_24dp"
            android:drawableStart="@drawable/ic_whatsapp_white_24dp"
            android:text="@string/social_whatsapp"
            android:theme="@style/SocialButton.WhatsApp"
            tools:backgroundTint="#25d366" />

        <Button
            android:id="@+id/btn_sms"
            style="@style/SocialButtonStyle"
            android:drawableLeft="@drawable/ic_android_messages_white_24dp"
            android:drawableStart="@drawable/ic_android_messages_white_24dp"
            android:text="@string/social_sms"
            android:theme="@style/SocialButton.SMS"
            tools:backgroundTint="#0084ff" />
    </LinearLayout>
</LinearLayout>