<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="22dp"
        tools:ignore="RtlHardcoded">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/subject"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:ellipsize="end"
                android:text="@string/dialog_item_subject"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/subject_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/subject"
                android:entries="@array/contact_developer_spinner_entries"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_massage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_item_message"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:text="@string/dialog_item_device_details"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/device_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textIsSelectable="false" />
    </LinearLayout>
</ScrollView>
