<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="?appCardBackground"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title_developer"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/developer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="16sp"
                tools:text="John Doe" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/developer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="onAboutItemClicked"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_contact_phone_black_24dp"
                android:tint="?drawerItemIconColor"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/nav_drawer_mobile"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/developer_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="onAboutItemClicked"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_email_black_24dp"
                android:tint="?drawerItemIconColor"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/nav_drawer_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/developer_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="onAboutItemClicked"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_web_black_24dp"
                android:tint="?drawerItemIconColor"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/about_developer_website"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>